Source/Alternet.UI.Pal/Api/PropertyGrid.Api.h

ALTERNET_UI_API PropertyGrid* PropertyGrid_Create_()
{
    return MarshalExceptions<PropertyGrid*>([&](){
        return new PropertyGrid();
    });
}
ALTERNET_UI_API int PropertyGrid_GetEventValidationFailureBehavior_(PropertyGrid* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetEventValidationFailureBehavior();
    });
}
ALTERNET_UI_API void PropertyGrid_SetEventValidationFailureBehavior_(PropertyGrid* obj, int value)
{
    MarshalExceptions<void>([&](){
        obj->SetEventValidationFailureBehavior(value);
    });
}
ALTERNET_UI_API void* PropertyGrid_GetEventPropValue_(PropertyGrid* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetEventPropValue();
    });
}
ALTERNET_UI_API int PropertyGrid_GetEventColumn_(PropertyGrid* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetEventColumn();
    });
}
ALTERNET_UI_API void* PropertyGrid_GetEventProperty_(PropertyGrid* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetEventProperty();
    });
}
ALTERNET_UI_API char16_t* PropertyGrid_GetEventPropertyName_(PropertyGrid* obj)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetEventPropertyName());
    });
}
ALTERNET_UI_API char16_t* PropertyGrid_GetEventValidationFailureMessage_(PropertyGrid* obj)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetEventValidationFailureMessage());
    });
}
ALTERNET_UI_API void PropertyGrid_SetEventValidationFailureMessage_(PropertyGrid* obj, const char16_t* value)
{
    MarshalExceptions<void>([&](){
        obj->SetEventValidationFailureMessage(value);
    });
}
ALTERNET_UI_API char16_t* PropertyGrid_GetNameAsLabel_()
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(PropertyGrid::GetNameAsLabel());
    });
}
ALTERNET_UI_API c_bool PropertyGrid_GetHasBorder_(PropertyGrid* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetHasBorder();
    });
}
ALTERNET_UI_API void PropertyGrid_SetHasBorder_(PropertyGrid* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetHasBorder(value);
    });
}
ALTERNET_UI_API int64_t PropertyGrid_GetCreateStyle_(PropertyGrid* obj)
{
    return MarshalExceptions<int64_t>([&](){
        return obj->GetCreateStyle();
    });
}
ALTERNET_UI_API void PropertyGrid_SetCreateStyle_(PropertyGrid* obj, int64_t value)
{
    MarshalExceptions<void>([&](){
        obj->SetCreateStyle(value);
    });
}
ALTERNET_UI_API int64_t PropertyGrid_GetCreateStyleEx_(PropertyGrid* obj)
{
    return MarshalExceptions<int64_t>([&](){
        return obj->GetCreateStyleEx();
    });
}
ALTERNET_UI_API void PropertyGrid_SetCreateStyleEx_(PropertyGrid* obj, int64_t value)
{
    MarshalExceptions<void>([&](){
        obj->SetCreateStyleEx(value);
    });
}
ALTERNET_UI_API PointI_C PropertyGrid_CalcScrolledPosition_(PropertyGrid* obj, PointI point)
{
    return MarshalExceptions<PointI_C>([&](){
        return obj->CalcScrolledPosition(point);
    });
}
ALTERNET_UI_API PointI_C PropertyGrid_CalcUnscrolledPosition_(PropertyGrid* obj, PointI point)
{
    return MarshalExceptions<PointI_C>([&](){
        return obj->CalcUnscrolledPosition(point);
    });
}
ALTERNET_UI_API int PropertyGrid_GetHitTestColumn_(PropertyGrid* obj, PointI point)
{
    return MarshalExceptions<int>([&](){
        return obj->GetHitTestColumn(point);
    });
}
ALTERNET_UI_API void* PropertyGrid_GetHitTestProp_(PropertyGrid* obj, PointI point)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetHitTestProp(point);
    });
}
ALTERNET_UI_API void* PropertyGrid_ColorDatabaseCreate_()
{
    return MarshalExceptions<void*>([&](){
        return PropertyGrid::ColorDatabaseCreate();
    });
}
ALTERNET_UI_API void PropertyGrid_ColorDatabaseDelete_(void* handle)
{
    MarshalExceptions<void>([&](){
        PropertyGrid::ColorDatabaseDelete(handle);
    });
}
ALTERNET_UI_API void PropertyGrid_ColorDatabaseSetGlobal_(void* handle)
{
    MarshalExceptions<void>([&](){
        PropertyGrid::ColorDatabaseSetGlobal(handle);
    });
}
ALTERNET_UI_API void PropertyGrid_ColorDatabaseAdd_(void* handle, const char16_t* name, Color color)
{
    MarshalExceptions<void>([&](){
        PropertyGrid::ColorDatabaseAdd(handle, name, color);
    });
}
ALTERNET_UI_API Color_C PropertyGrid_ColorDatabaseFind_(void* handle, const char16_t* name)
{
    return MarshalExceptions<Color_C>([&](){
        return PropertyGrid::ColorDatabaseFind(handle, name);
    });
}
ALTERNET_UI_API char16_t* PropertyGrid_ColorDatabaseFindName_(void* handle, Color color)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(PropertyGrid::ColorDatabaseFindName(handle, color));
    });
}
ALTERNET_UI_API void PropertyGrid_KnownColorsClear_()
{
    MarshalExceptions<void>([&](){
        PropertyGrid::KnownColorsClear();
    });
}
ALTERNET_UI_API void PropertyGrid_KnownColorsAdd_(const char16_t* name, const char16_t* title, Color value, int knownColor)
{
    MarshalExceptions<void>([&](){
        PropertyGrid::KnownColorsAdd(name, title, value, knownColor);
    });
}
ALTERNET_UI_API void PropertyGrid_KnownColorsApply_()
{
    MarshalExceptions<void>([&](){
        PropertyGrid::KnownColorsApply();
    });
}
ALTERNET_UI_API void PropertyGrid_KnownColorsSetCustomColorTitle_(const char16_t* value)
{
    MarshalExceptions<void>([&](){
        PropertyGrid::KnownColorsSetCustomColorTitle(value);
    });
}
ALTERNET_UI_API void* PropertyGrid_GetPropertyValidator_(PropertyGrid* obj, void* prop)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetPropertyValidator(prop);
    });
}
ALTERNET_UI_API void PropertyGrid_SetPropertyValidator_(PropertyGrid* obj, void* prop, void* validator)
{
    MarshalExceptions<void>([&](){
        obj->SetPropertyValidator(prop, validator);
    });
}
ALTERNET_UI_API void PropertyGrid_SetPropertyFlag_(PropertyGrid* obj, void* prop, int flag, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetPropertyFlag(prop, flag, value);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateEx_(int64_t styles)
{
    return MarshalExceptions<void*>([&](){
        return PropertyGrid::CreateEx(styles);
    });
}
ALTERNET_UI_API void PropertyGrid_AddActionTrigger_(PropertyGrid* obj, int action, int keycode, int modifiers)
{
    MarshalExceptions<void>([&](){
        obj->AddActionTrigger(action, keycode, modifiers);
    });
}
ALTERNET_UI_API void PropertyGrid_DedicateKey_(PropertyGrid* obj, int keycode)
{
    MarshalExceptions<void>([&](){
        obj->DedicateKey(keycode);
    });
}
ALTERNET_UI_API void PropertyGrid_AutoGetTranslation_(c_bool enable)
{
    MarshalExceptions<void>([&](){
        PropertyGrid::AutoGetTranslation(enable);
    });
}
ALTERNET_UI_API void PropertyGrid_CenterSplitter_(PropertyGrid* obj, c_bool enableAutoResizing)
{
    MarshalExceptions<void>([&](){
        obj->CenterSplitter(enableAutoResizing);
    });
}
ALTERNET_UI_API void PropertyGrid_ClearActionTriggers_(PropertyGrid* obj, int action)
{
    MarshalExceptions<void>([&](){
        obj->ClearActionTriggers(action);
    });
}
ALTERNET_UI_API c_bool PropertyGrid_CommitChangesFromEditor_(PropertyGrid* obj, uint32_t flags)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->CommitChangesFromEditor(flags);
    });
}
ALTERNET_UI_API void PropertyGrid_EditorsValueWasModified_(PropertyGrid* obj)
{
    MarshalExceptions<void>([&](){
        obj->EditorsValueWasModified();
    });
}
ALTERNET_UI_API void PropertyGrid_EditorsValueWasNotModified_(PropertyGrid* obj)
{
    MarshalExceptions<void>([&](){
        obj->EditorsValueWasNotModified();
    });
}
ALTERNET_UI_API c_bool PropertyGrid_EnableCategories_(PropertyGrid* obj, c_bool enable)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->EnableCategories(enable);
    });
}
ALTERNET_UI_API SizeD_C PropertyGrid_FitColumns_(PropertyGrid* obj)
{
    return MarshalExceptions<SizeD_C>([&](){
        return obj->FitColumns();
    });
}
ALTERNET_UI_API Color_C PropertyGrid_GetCaptionBackgroundColor_(PropertyGrid* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetCaptionBackgroundColor();
    });
}
ALTERNET_UI_API Color_C PropertyGrid_GetCaptionForegroundColor_(PropertyGrid* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetCaptionForegroundColor();
    });
}
ALTERNET_UI_API Color_C PropertyGrid_GetCellBackgroundColor_(PropertyGrid* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetCellBackgroundColor();
    });
}
ALTERNET_UI_API Color_C PropertyGrid_GetCellDisabledTextColor_(PropertyGrid* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetCellDisabledTextColor();
    });
}
ALTERNET_UI_API Color_C PropertyGrid_GetCellTextColor_(PropertyGrid* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetCellTextColor();
    });
}
ALTERNET_UI_API uint32_t PropertyGrid_GetColumnCount_(PropertyGrid* obj)
{
    return MarshalExceptions<uint32_t>([&](){
        return obj->GetColumnCount();
    });
}
ALTERNET_UI_API Color_C PropertyGrid_GetEmptySpaceColor_(PropertyGrid* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetEmptySpaceColor();
    });
}
ALTERNET_UI_API int PropertyGrid_GetFontHeight_(PropertyGrid* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetFontHeight();
    });
}
ALTERNET_UI_API Color_C PropertyGrid_GetLineColor_(PropertyGrid* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetLineColor();
    });
}
ALTERNET_UI_API Color_C PropertyGrid_GetMarginColor_(PropertyGrid* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetMarginColor();
    });
}
ALTERNET_UI_API int PropertyGrid_GetMarginWidth_(PropertyGrid* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetMarginWidth();
    });
}
ALTERNET_UI_API void PropertyGrid_SetEventCallback_(PropertyGrid::PropertyGridEventCallbackType callback)
{
    PropertyGrid::SetEventCallback(callback);
}